<resources>
    <string name="app_name">IvanLauncher</string>


    <string name="photo">Photo</string>
    <string name="camera">Camera</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Storage doesn\'t available</string>
    <string name="title_activity_ocr">Ocr Capture Activity</string>

    <string name="mainMenu">Основно меню</string>
    <string name="status">Статус на телефона</string>
    <string name="number">Номер</string>
    <string name="allContacts">Всички контакти</string>
    <string name="callRegister">Регистър на повиквания</string>
    <string name="duration">Продължителност</string>
    <string name="contactGroups">Групи контакти</string>
    <string name="bookmarksMenu">Запаметени адреси на сайтове</string>
    <string name="register">Регистър на повиквания</string>
    <string name="missedCalls">Пропуснати повиквания</string>
    <string name="dailedCalls">Набрани номера</string>
    <string name="receivedCalls">Приети повиквания</string>
    <string name="sendMail">Изпрати писмо</string>
    <string name="readImage">Прочети текст от снимка</string>
    <string name="Calling">Търси Ви</string>
    <string name="Dailing">Набиране</string>
    <string name="settings">Настройки</string>
    <string name="sms">есемеси</string>
    <string name="emails">Електронна поща</string>
    <string name="read">преочетено</string>
    <string name="notRead">непрочетено</string>
    <string name="from">есемес от</string>
    <string name="receivedOn">получено на</string>
    <string name="allApps">Всички приложения</string>
    <string name="batteryIs">Батерията е </string>
    <string name="percent">Процента</string>
    <string name="nowCharging">Зареждам се</string>
    <string name="currentTime">Часът е</string>
    <string name="displayOn">Екранът е включен</string>
    <string name="displayOff">Екранът е изключен</string>
    <string name="noNetwork">Няма връзка с интернет</string>
    <string name="wifi">Връзката е домашен интернет</string>
    <string name="mobileNework">Мобилен интернет много опасно</string>
    <string name="selectedElementIs">Селектираният елемент е</string>
    <string name="dailing">Набирам</string>
    <string name="pleaseConfirm">Моля потвърдете още ведъж</string>
    <string name="inCamera">В камера</string>
    <string name="tookPhoto">Снимам</string>
    <string name="closedConnection">Затварям връзката</string>
    <string name="inCallWith">Разговор с </string>
    <string name="youDialed">Набрахте  </string>
    <string name="email">EmaiL::::</string>
    <string name="email_summary">Emaill---</string>
    <string name="emailPassword">Password</string>
    <string name="emailPasswordsummary">Enter your email here</string>
    <string name="forbidStatusBarSummary">This will forbid the statusbar</string>
    <string name="forbidStatusbar">Hide StatusBar</string>
    <string name="screenUnLocked">Отключен</string>
    <string name="screenLocked">заключен</string>


</resources>
